# hello-fortran-cmake-autotools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config_build_test
cmake/: HelloFortranCMakeAutotoolsConfig.cmake.in  helper.cmake
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  mo_square.f90
test/: CMakeLists.txt  test_mo_square.f90
